<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 David Schulte
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>

    <string name="app_name">Play Music Exporter (beta)</string>
    <string name="title_track_detail">Track Detail</string>

    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_export">Export</string>
    <string name="action_play">Play</string>
    <string name="action_share">Share</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="view_type_selection_title">View</string>
    <string name="title_view_album">Albums</string>
    <string name="title_view_artist">Artists</string>
    <string name="title_view_playlist">Playlists</string>
    <string name="title_view_rated">Good rated</string>

    <string name="title_settings">Settings</string>

    <string name="notification_export_working_summery">Export track %1$d of %2$d&#8230;</string>
    <string name="notification_export_working_single_summery">Export track&#8230;</string>

    <string name="notification_export_finished_title">Export finished!</string>
    <string name="notification_export_finished_summery">%1$d tracks were exported successfully!</string>
    <string name="notification_export_finished_single_summery">%1$s was exported successfully!</string>

    <string name="dialog_storage_access_denied_title">Storage access denied</string>
    <string name="dialog_storage_access_denied">The PlayMusicExporter always needs to write to the external storage. This is part of the Marshmallow fix.\n\nPlease restart the app and grant the permission.</string>

    <string name="toast_error_track_not_offline">You can only export offline tracks. Try to download the album offline in Play Music.</string>

    <string name="text_okay">Okay</string>

    <string name="search">Search&#8230;</string>
    <string name="button_export_group">Export all tracks</string>

    <string name="settings_category_export">Export settings</string>
    <string name="settings_category_extra">Extras</string>
    <string name="settings_category_about_me">About me</string>
    <string name="settings_category_thanks">Thanks to</string>
    <string name="settings_category_develop">Develop</string>

    <string name="settings_export_path">Location</string>
    <string name="settings_export_structure_albums">Subdirectory structure for albums</string>
    <string name="settings_export_structure_groups">Subdirectory structure for playlists</string>

    <string name="settings_export_id3">MP3 metadata</string>
    <string name="settings_export_id3_with_cover">Metadata with cover</string>
    <string name="settings_export_id3_without_cover">Metadata without cover</string>
    <string name="settings_export_id3_disabled">No metadata</string>

    <string name="settings_export_id3_artwork_size">Maximum artwork size</string>
    <string name="settings_export_id3_artwork_size_summary">If the artwork original size is larger than this setting the app will size down the artwork to this size.</string>
    <string name="settings_export_id3_artwork_size_128px" translatable="false">128x128px</string>
    <string name="settings_export_id3_artwork_size_256px" translatable="false">256x256px</string>
    <string name="settings_export_id3_artwork_size_512px" translatable="false">512x512px</string>
    <string name="settings_export_id3_artwork_size_1024px" translatable="false">1024x1024px</string>

    <string-array name="settings_export_id3_artwork_size_value_names" translatable="false">
        <item>@string/settings_export_id3_artwork_size_128px</item>
        <item>@string/settings_export_id3_artwork_size_256px</item>
        <item>@string/settings_export_id3_artwork_size_512px</item>
        <item>@string/settings_export_id3_artwork_size_1024px</item>
    </string-array>
    <string-array name="settings_export_id3_artwork_size_values" translatable="false">
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>

    <string name="settings_export_path_custom">Custom path</string>
    <string-array name="settings_export_id3_value_names">
        <item>@string/settings_export_id3_with_cover</item>
        <item>@string/settings_export_id3_without_cover</item>
        <item>@string/settings_export_id3_disabled</item>
    </string-array>
    <string-array name="settings_export_id3_values" translatable="false">
        <item>id3_with_cover</item>
        <item>id3_without_cover</item>
        <item>id3_disabled</item>
    </string-array>



    <string name="settings_open_homepage_title" translatable="false">David-Schulte.de</string>
    <string name="settings_open_homepage_url" translatable="false"><![CDATA[http://www.david-schulte.de/]]></string>

    <string name="settings_mp3agic_title" translatable="false">Mp3agic ID3 Libary</string>
    <string name="settings_mp3agic_summery" translatable="false">Michael Patricios &#169; 2006&#8211;2013</string>
    <string name="settings_mp3agic_url" translatable="false"><![CDATA[https://github.com/mpatric/mp3agic]]></string>

    <string name="settings_donation_title">Support me</string>
    <string name="settings_donation_summery">Donate to me via PayPal</string>
    <string name="settings_donation_url" translatable="false"><![CDATA[https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A2VD24Z5E32RU]]></string>

    <string name="settings_build_date">Build date</string>

    <string name="action_mode_track_selection">%d tracks selected</string>
</resources>
