<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 David Schulte
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Export settings -->
    <PreferenceCategory android:title="@string/settings_category_export">
        <!-- Export path -->
        <Preference android:title="@string/settings_export_path"
            android:key="preference_export_path"/>

        <!-- Path structure for albums -->
        <Preference android:title="@string/settings_export_structure_albums"
            android:key="preference_structure_albums"
            />

        <!-- Path structure for groups -->
        <Preference android:title="@string/settings_export_structure_groups"
            android:key="preference_structure_groups"
            />

        <!-- ID3 settings -->
        <ListPreference android:title="@string/settings_export_id3"
            android:key="preference_id3"
            android:defaultValue="id3_with_cover"
            android:entries="@array/settings_export_id3_value_names"
            android:entryValues="@array/settings_export_id3_values"
            />
    </PreferenceCategory>

    <!-- Thanks to -->
    <PreferenceCategory android:title="@string/settings_category_thanks">
        <!-- Mp3agic -->
        <Preference android:title="@string/settings_mp3agic_title"
            android:summary="@string/settings_mp3agic_summery">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/settings_mp3agic_url" />
        </Preference>
    </PreferenceCategory>

    <!-- About me -->
    <PreferenceCategory android:title="@string/settings_category_about_me">
        <!-- Homepage -->
        <Preference android:title="@string/settings_open_homepage_title"
            android:summary="@string/settings_open_homepage_url">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/settings_open_homepage_url" />
        </Preference>

        <!-- Donation -->
        <Preference android:title="@string/settings_donation_title"
            android:summary="@string/settings_donation_summery">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/settings_donation_url" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>